# nvim-projet

./: .gitignore  BUILD.bazel  Makefile  README.md  WORKSPACE.bazel  default.do  init.sh  projet.toml  test.sh
.luarocks/: config-5.1.lua
.nyc_output/processinfo/: afa31aa6-2fc9-4c07-8193-631ecd0d33d3.json  index.json
fnl/: projet-test.fnl  projet.fnl  tap.fnl
fnl/projet/: init.fnl  macros.fnl  string.fnl  template.fnl  vim.fnl
spec/: projet_spec.fnl  spec-helper.fnl
spec/projet/: init_spec.fnl  template_spec.fnl
tools/: fennel.bzl
