workspace(name = "nvim-projet")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive", "http_file")

http_archive(
    name = "lua",
    sha256 = "2640fc56a795f29d28ef15e13c34a47e223960b0240e8cb0a82d9b0738695333",
    urls = ["https://www.lua.org/ftp/lua-5.1.5.tar.gz"],
)

http_file(
    name = "fennel",
    executable = True,
    sha256 = "d92217bd05e10d56f71abeeeccb627f0f5bde972e86a44678c315e35650a5892",
    urls = ["https://fennel-lang.org/downloads/fennel-0.9.2-x86_64"],
)
