workspace(name = "nvim-projet")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive", "http_file")

http_file(
    name = "fennel",
    executable = True,
    sha256 = "d92217bd05e10d56f71abeeeccb627f0f5bde972e86a44678c315e35650a5892",
    urls = ["https://fennel-lang.org/downloads/fennel-0.9.2-x86_64"],
)
